<resources>
    <string name="app_name">EmergencyBackupV1.0</string>
    <string name="email">E-mail</string>
    <string name="contraseña">Contraseña</string>
    <string name="siguiente">Siguiente</string>
    <string name="importante">IMPORTANTE</string>
    <string name="celular">Celular</string>
    <string name="necessaryData">Los siguientes datos son necesarios para garantizar la seguridad de tu información
    </string>
    <string name="securityQuestion">Pregunta de seguridad</string>
    <string name="sqInfo">Selecciona una de las siguientes. No olvides tu respuesta, en caso de ser necesario se
        te pedirá que la ingreses exactamente como lo hayas escrito la primera vez.
    </string>

    <string name="key_generated">Se ha generado una llave con la cual podrás descifrar tus archivos al momento de reestablecer un respaldo.
    </string>
    <string name="key_generated2">Guárdala en un lugar seguro que no sea en tu teléfono y no la pierdas. Sin ella no podrás recuperar la información respaldada.
    </string>
    <string name="key_location">La llave se encuentra en:</string>
    <string name="go_to_config">No olvides acudir cuanto antes a la sección de ajustes para configurar tu respaldo.</string>
    <string name="restore_warning">Si no has descargado tu respaldo previamente presiona el botón de descarga y espera unos momentos</string>
    <string name="change_key">Si tinenes un respaldo en la nube que no hayas restaurado, no podrás recuperarlo si cambias tu llave</string>
    <string name="change_key2">Una vez el cambio sea realizado, la llave anterior quedará inservible</string>
    <string name="change_key3">Si deseas continuar presiona el botón para generar una nueva llave</string>
    <string name="login">Iniciar sesión</string>
    <string name="arg_backuponcloud">backuponclound</string>
    <string name="signup">Registrarse</string>
    <string name="entendido">Entendido</string>
    <string name="title_activity_home">Home</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_ajustes">Ajustes</string>
    <string name="title_respaldo">Respaldo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dash</string>
    <string name="title_notifications">Notif</string>
    <string name="fragment_time_period_Instructions_header">¿Qué tal seguido realizas tus repaldos?</string>
    <string name="fragment_time_period_Instructions_text_1">En caso de una emergencia, respaldaremos solo los archivos que que se hayan creado despues de tu ultimo respaldo usando este dato como referencia</string>
    <string name="fragment_time_period_Instructions_text_2">Selecciona un periodo de tiempo</string>
    <string name="button_seleccionar">Seleccionar</string>
    <string name="button_cifrar">Cifrar</string>
    <string name="button_descifrar">Descifrar</string>
</resources>
