<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignIn2" android:background="#204051">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:paddingTop="90dp" tools:ignore="MissingConstraints">
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="400dp" app:cardBackgroundColor="#3B6978"
                android:paddingBottom="30dp"
                app:cardCornerRadius="30dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="30dp" android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/necessaryData"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/editText"
                        android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                        android:paddingTop="30dp" android:text="@string/celular"/>
                <TextView
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="30dp" android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/securityQuestion"
                        android:textSize="18dp"/>
                <TextView
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:text="@string/sqInfo"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/spinner"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage"
                        android:ems="10"
                        android:id="@+id/editText2"
                        android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                        android:paddingTop="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <Button
                android:text="@string/siguiente"
                android:layout_width="match_parent"
                android:layout_height="58dp" android:id="@+id/button"
                android:layout_marginTop="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/rounded_corners"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>