<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/fragment_time_period_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/fragment_time_period_Instructions_header"
        android:textAlignment="center"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_time_period_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_time_period_Instructions_text_1"
        android:textAlignment="center"
        android:textSize="@dimen/text_medium"
        app:layout_constraintTop_toBottomOf="@id/fragment_time_period_header" />

    <TextView
        android:id="@+id/fragment_time_period_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fragment_time_period_Instructions_text_2"
        android:textAlignment="center"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_time_period_text1" />

    <LinearLayout
        android:id="@+id/picker_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fragment_time_period_text2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <NumberPicker
                android:id="@+id/fragment_time_period_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_big"
                android:text="Días"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" />



    </LinearLayout>
    <Button
        android:id="@+id/time_period_btn_save_changes"
        app:layout_constraintTop_toBottomOf="@id/picker_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="Guardar cambios"
        android:textColor="@color/button_font"
        app:backgroundTint="#FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>