<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:baselineAligned="false" android:orientation="horizontal">

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"></RelativeLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".70">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15"></RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".70">

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                    <FrameLayout
                            android:id="@+id/fl_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorForeground"
                            android:baselineAligned="false" android:orientation="horizontal">

                        <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".10"></RelativeLayout>

                        <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".80">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".05"></RelativeLayout>

                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".70">

                                            <LinearLayout
                                                    android:layout_height="match_parent"
                                                    android:layout_width="match_parent"
                                                    android:orientation="vertical"
                                                    android:gravity="center">

                                                <TextView
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="match_parent"
                                                        android:text="@string/necessaryData" />

                                                <EditText
                                                        android:id="@+id/editText"
                                                        android:inputType="phone"
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="match_parent"
                                                        android:hint="@string/celular" />
                                                <TextView
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="match_parent"
                                                        android:text="@string/securityQuestion"
                                                         />

                                                <TextView
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="match_parent"
                                                        android:text="@string/sqInfo" />

                                                <Spinner
                                                        android:id="@+id/spinner"
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="match_parent" />
                                                <EditText
                                                        android:id="@+id/answer"
                                                        android:inputType="text"
                                                        android:layout_height="wrap_content"
                                                        android:layout_width="match_parent"
                                                        android:hint="respuesta"/>
                                                <Button
                                                        android:id="@+id/signup_complete_bttn"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="wrap_content"
                                                        android:text="@string/signup"
                                                        android:onClick="signUp"/>
                                            </LinearLayout>
                                </RelativeLayout>

                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".05"></RelativeLayout>
                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".10"></RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15"></RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"></RelativeLayout>
</LinearLayout>


