<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".80">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".80">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@color/background"
                    app:cardCornerRadius="10dp">

                    <FrameLayout
                        android:id="@+id/fl_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".10"></RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".80">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:layout_weight=".70"
                                    android:gravity="bottom">



                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center"
                                            android:orientation="vertical">

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/importante"
                                                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/key_generated"
                                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                                            <Button
                                                android:id="@+id/logintosignupbttn"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_marginTop="20dp"
                                                android:background="@drawable/custom_button"
                                                android:onClick="goHome"
                                                android:text="@string/entendido"
                                                android:textColor="@color/button_font" />
                                        </LinearLayout>

                                </RelativeLayout>
                            </LinearLayout>
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".10
"></RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>