<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:baselineAligned="false"
        android:orientation="horizontal">

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".10
"></RelativeLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".80">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".10
"></RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".80">

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp">

                    <FrameLayout
                            android:id="@+id/fl_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorForeground"
                            android:baselineAligned="false"
                            android:orientation="horizontal">

                        <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".10"></RelativeLayout>

                        <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".80">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".10
"></RelativeLayout>

                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".70"
                                        android:gravity="center">

                                    <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center"
                                            android:orientation="vertical">

                                        <ImageView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                app:srcCompat="@drawable/ic_person_24px" />

                                        <EditText
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:hint="@string/email"
                                                android:inputType="textEmailAddress" />

                                        <EditText
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:hint="@string/contraseña"
                                                android:inputType="textPassword" />

                                        <Button
                                                android:id="@+id/loginbttn"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:background="@color/colorAccent"
                                                android:onClick="logIn"
                                                android:text="@string/login" />

                                        <Button
                                                android:id="@+id/logintosignupbttn"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:background="@color/colorAccent"
                                                android:onClick="signUp"
                                                android:paddingVertical="10dp"
                                                android:text="@string/signup" />
                                    </LinearLayout>
                                </RelativeLayout>

                                <RelativeLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="0dp"
                                        android:layout_weight=".10
"></RelativeLayout>
                            </LinearLayout>
                        </RelativeLayout>

                        <RelativeLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight=".10
"></RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".10
"></RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".10
"></RelativeLayout>
</LinearLayout>